--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 streamlit
-from streamlit_authenticator import Authenticate
-from streamlit_option_menu import option_menu
+streamlit_authenticator 
+streamlit_option_menu  
